src/Components/Formula.css
/** 
  * Formula component styles
  * @module src/Components/Formula.css
  * text is right-aligned
  * background color is black
  * border color is dark gray
  * text color is monitor green
  * font size is 20px
  * font is bold
  * font is courier
  */
.formula {
  background-color: #000000;
  border: 5px solid #121412;
  color: #039703;
  padding: 15px 32px;
  text-align: right;
  text-decoration: none;
  display: inline-block;
  font-family: courier;
  font-size: 20px;
  font-weight: bold;
  width: 250px;
  height: 30px;
}

.result {
  background-color: #000000;
  border: 5px solid #121412;
  color: #039703;
  padding: 15px 32px;
  text-align: right;
  text-decoration: none;
  display: inline-block;
  font-family: courier;
  width: 250px;
}


.invisible-scrollbar{
  display: block;
  width: 250px;
  overflow: auto;
}

.invisible-scrollbar::-webkit-scrollbar {
  display: none;
}

